src-errormsg/E21-WrongPreludeFunction/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E21-WrongPreludeFunction/Plinth.hs:16:15: error: [GHC-88464]
    Variable not in scope: length :: List Integer -> Integer
   |
16 | myLength xs = length xs
   |               ^^^^^^
